# Polyblast-engine

./: CMakeLists.txt  LICENSE  Readme.md  resources.rc
include/: camera.hpp  mesh.hpp  opengl_utils.hpp  shader.hpp  texture.hpp
include/bufferObjects/: EBO.hpp  VAO.hpp  VBO.hpp
resources/: fragment.glsl  object.frag  object.vert  vertex.glsl
resources/Shaders/: light.frag  object.frag  object.vert
src/: camera.cpp  main.cpp  mesh.cpp  opengl_utils.cpp  shader.cpp  texture.cpp
src/bufferObjects/: EBO.cpp  VAO.cpp  VBO.cpp
